test/data/resolver/valid/self_loop_directed.cypher
MATCH (p:Person)-[r:KNOWS]->(q:Person) RETURN r
