test/data/resolver/invalid/unknown_edge.cypher
MATCH (p:Person)-[:KNOWS]->(q:Person) RETURN p
